--- a/css/bear.css
+++ b/css/bear.css
@@ -2,7 +2,8 @@ html {
   background: url(../images/cliff.jpg) no-repeat top left;
 }
 
-
+/* media query */
+@media only screen and (max-width: 1196px) {
 #bear {
   position: absolute;
   top: 100px;
@@ -11,3 +12,4 @@ html {
 
 /* Write your solution here */
 
+}
