automatically backed up by learn

--- a/css/monkey.css
+++ b/css/monkey.css
@@ -2,11 +2,14 @@ html {
   background: url(../images/spice-girls.jpg) no-repeat top left;
 }
 /* media query */
-@media (max-width: 1170px) and (min-width: 406px) {
+ {
 
 #monkey {
-  top: -550px;
+  position: absolute;
+  top: 550px;
+  right: 120px;
+  
 }
+@media (max-width: 1170px) and (min-width: 406px)
 
-
-}
+}}
