--- a/css/monkey.css
+++ b/css/monkey.css
@@ -2,12 +2,12 @@ html {
   background: url(../images/spice-girls.jpg) no-repeat top left;
 }
 
- {
-
 #monkey 
-  position: absolute;
+  {position: absolute;
   top: 550px;
-  right: 120px;
+  right: 120px;}
 
 /* media query */  
-@media (max-width: 1170px) and (min-width: 406px)}
+@media (max-width: 1170px) and (min-width: 406px){
+
+}
